# localsage

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  containerize.sh  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  python-publish.yml
localsage/: cli_controller.py  config.py  file_manager.py  globals.py  sage.py  sage_math_sanitizer.py  session_manager.py  ui.py
tests/: test_sage.py  test_sage_math_sanitizer.py
tools/: TOOLS.md  test-session.fish  test-session.sh
